# crochet

./: '  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  boolean_logic.txt  build.sh  callgrind.out.12697  crochet  depends.sh  go.mod  setup.sh
.clangd/index/: base64.c.1D233862E4D073F4.idx  base64.h.47CC061BF1D9CAB7.idx  http.c.530759326A3160B3.idx  http.h.29B192E5D1AF31D8.idx  http.h.BCCCD44ADB5D1259.idx  main.c.36C3949A1268BC75.idx  pprint.c.2D352B40FAD9B977.idx  pprint.h.9CF8CFD2257C1BFF.idx  wss.c.309E76FCE5E94C20.idx  wss.c.6B90E83F77014AAE.idx  wss.h.141FE74B5D2B6752.idx  wss.h.6B2B292D44CE175D.idx
cmd/crochet/: main.go
docs/: GlobalNamespace.md
docs/GlobalNamespace/: _http_response.md  _map_list.md  _wss_packet.md  candle.md  chart.md  chart_object.md  chart_region.md  coinbase_book_level.md  coinbase_value.md  generic_book.md  hashmap.md  httpwss_session.md  json_array.md  json_value.md  security.md
libs/: black_marubuzu.c  dragonfly_doji.c  four_price_doji.c  gravestone_doji.c  hanging_man.c  long_legged_dragonfly_doji.c  marubuzu.c  resistance_trend.c  shooting_star.c  spinning_top.c  support_trend.c  white_marubuzu.c
mis/: clangfmt.sh
pkg/comms/: comms.go  types.go
pkg/server/: server.go
profiling/: out.txt
scripts/: clangfmt.sh  config.template.json  generatecompilecommands.sh
src/: .main.c.swp  Makefile  api.c  api.h  config.template.json  globals.c  lib.h  main.c  pprint.c  pprint.h  status.h  types.h  unittest.h
src/algae/: algae.c  algae.h
src/client/: Makefile  client.c  client.h
src/exchanges/: .oanda.c.swp  CMakeLists.txt  Makefile  coinbase.c  coinbase.h  exchanges.c  exchanges.h  exhangesall.h  oanda.c  oanda.h
src/ffjson/: CMakeLists.txt  Makefile  ffjson.c  ffjson.h  rfc8259.txt
src/finmath/: CMakeLists.txt  Makefile  base_conversion.c  base_conversion.h  linear_equation.c  linear_equation.h
src/globals/: Makefile  globals.c  globals.h
src/hashmap/: CMakeLists.txt  Makefile  hashmap.c  hashmap.h
src/httpws/: CMakeLists.txt  Makefile  base64.c  base64.h  http.c  http.h  http11.c  http11.h  httpws.h  server.c  server.h  session.c  session.h  wss.c  wss.h
src/io/: Makefile  web.c  web.h
src/jsonast/: json.h
src/mathematica/: lex.h
src/orderbooks/: CMakeLists.txt  Makefile  book.c  book.h  coinbase.c  coinbase.h
src/pprint/: Makefile  pprint.c  pprint.h
src/security/: .analysis.c.swp  CMakeLists.txt  Makefile  analysis.c  analysis.h  chart.c  chart.h  security.c  security.h  tsqueue.c  tsqueue.h
src/string/: string.c  string.h
src/web/: comms.c  comms.h  protocol_lws_minimal.c  web.c  web.h
theories/: PriceInefficiencies.tex
web/: index.html  package-lock.json  package.json  tsconfig.frontend.json  tsconfig.json  tsconfig.server.json
web/html/: index.html
web/js/: HeaderBar.ts  MainDocument.ts
web/server/: index.ts
webroot/: chart.js  comms.js  index.css  index.html  solarized.css  switch.css
